--- a/backend/src/Dockerfile
+++ b/backend/src/Dockerfile
@@ -1,13 +1,11 @@
 FROM python:3.12
 
-WORKDIR /app
+WORKDIR /code
 
-COPY requirements.txt .
+COPY ./requirements.txt /code/requirements.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /code/requirements.txt
 
-COPY . .
+COPY ./ /code/
 
-EXPOSE 8000
-
-CMD uvicorn main:app --host 0.0.0.0 --port 8000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
