refactor: add frontend build/lint stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - build
   - lint
   - test
 
@@ -6,23 +7,41 @@ pylint:
   stage: lint
   image: python:3.12
   variables:
-    PYTHONPATH: "${PYTHONPATH}:backend/src" 
+    PYTHONPATH: "${PYTHONPATH}:backend/src"
   before_script:
     - pip install -r backend/src/requirements.txt
     - pip install pylint
   script:
-     - pylint backend/src --disable=C0114,C0116,R0903,C0115,C0103 --max-line-length=120
+    - pylint backend/src --disable=C0114,C0116,R0903,C0115,C0103 --max-line-length=120
 
 pytest:
   stage: test
   image: python:3.12
   variables:
-     PYTHONPATH: "${PYTHONPATH}:backend/src"
+    PYTHONPATH: "${PYTHONPATH}:backend/src"
   before_script:
     - pip install -r backend/src/requirements.txt
     - pip install pytest
   script:
     - pytest backend/src/tests/
+
+font_build:
+  stage: build
+  image: node:20
+  before_script:
+    - cd frontend/
+    - npm install
+  script:
+    - npm run build
+
+front_lint:
+  stage: lint
+  image: node:20
+  before_script:
+    - cd frontend/
+    - npm install
+  script:
+    - npm run lint
 
 # Exclude changes to README.md from triggering the pipeline
 # The pipeline will not run if only changes to README.md are made
