Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,23 +7,29 @@ pylint:
   stage: lint
   image: python:3.12
   variables:
-    PYTHONPATH: "${PYTHONPATH}:backend/src"
+    PYTHONPATH: "${PYTHONPATH}:backend/src" 
   before_script:
     - pip install -r backend/src/requirements.txt
     - pip install pylint
   script:
-    - pylint backend/src --disable=C0114,C0116,R0903,C0115,C0103 --max-line-length=120
+     - pylint backend/src --disable=C0114,C0116,R0903,C0115,C0103 --max-line-length=120
+  except:
+    changes:
+      - README.md
 
 pytest:
   stage: test
   image: python:3.12
   variables:
-    PYTHONPATH: "${PYTHONPATH}:backend/src"
+     PYTHONPATH: "${PYTHONPATH}:backend/src"
   before_script:
     - pip install -r backend/src/requirements.txt
     - pip install pytest
   script:
     - pytest backend/src/tests/
+  except:
+    changes:
+      - README.md
 
 font_build:
   stage: build
@@ -33,6 +39,9 @@ font_build:
     - npm install
   script:
     - npm run build
+  except:
+    changes:
+      - README.md
 
 front_lint:
   stage: lint
@@ -42,8 +51,6 @@ front_lint:
     - npm install
   script:
     - npm run lint
-
-# Exclude changes to README.md from triggering the pipeline
-# The pipeline will not run if only changes to README.md are made
-except:
-  - /^README\.md$/
+  except:
+    changes:
+      - README.md
