--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,10 +62,12 @@ front_deploy:
   cache:
     key:
       files:
-        - frontend/package-lock.json
+        - package-lock.json
       prefix: npm
     paths:
-      - frontend/node_modules/
+      - node_modules/
+  before_script:
+    - cd frontend/
   script:
     - npm install
     - npm run build
