--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.9"
 
 services:
   codeforcer_project:
+    image: codeforcer:test
     container_name: codeforcer
     build:
       context: ../../backend/src
-      dockerfile: ./Dockerfile
     command: >
       bash -c "pip install pytest && pytest backend/src/tests/"
