--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 
 services:
-  codeforcer_project:
-    image: codeforcer:test
-    container_name: codeforcer
+  codeforcer:
+    container_name: codeforcer_python
     build:
       context: ../../backend/src
+      dockerfile: ./Dockerfile
     command: >
       bash -c "pip install pytest && pytest backend/src/tests/"
