fix: changed tests paths

--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       context: ../../backend/src
       dockerfile: ./Dockerfile
     command: >
-      bash -c "pip install pytest && pytest backend/src/tests/"
+      bash -c "pip install pytest && pytest /code/tests"
