--- a/backend/src/Dockerfile
+++ b/backend/src/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.12
 
 WORKDIR /code
 
-COPY ./requirements.txt /code/requirements.txt
+COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r /code/requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./ /code/
+COPY . .
