chore: tried to see folders

--- a/docker/test/docker-compose.yml
+++ b/docker/test/docker-compose.yml
@@ -5,4 +5,4 @@ services:
       context: ../../backend/src
       dockerfile: ./Dockerfile
     command: >
-      bash -c "pip install pytest && pytest code/tests/"
+      bash -c "pip install pytest && ls -a"
