--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,6 @@ delivery-job:
   dependencies:
     - test python
   script:
-    - docker login -p $DOCKER_REGISTRY_KEY -u $DOCKER_REGISTRY_USER mashfeii
+    - echo "$DOCKER_HUB_PASSWORD" | docker login --username $DOCKER_HUB_LOGIN --password-stdin
     - docker tag codeforcer:test $CI_REGISTRY_IMAGE
     - docker push $CI_REGISTRY_IMAGE
