chore: changed apk to apt

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy:
   stage: deploy 
   when: manual
   before_script:
-    - command -v ssh-agent >/dev/null || ( apk update -qq && apk add openssh-client -qq)
+    - command -v ssh-agent >/dev/null || ( apt update -qq && apt add openssh-client -qq)
     - eval $(ssh-agent -s)
     - chmod 400 "$SSH_PRIVATE_KEY"
     - ssh-add "$SSH_PRIVATE_KEY"
@@ -55,7 +55,7 @@ deploy:
     - mkdir -p ~/.ssh && touch ~/.ssh/known_hosts
     - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
     - export $(grep -v '^#' .env | xargs -0)
-    - apk update -qq && apk add -qq openssh-client
+    - apt update -qq && apt add -qq openssh-client
   script:
     - ssh root@10.90.138.143
     - docker compose up -d --build
