chore: almost empty commit

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,9 @@ front_lint:
 deploy:
   stage: deploy 
   when: manual
+  dependencies:
+    - test
+    - lint
   tags: 
     - server-runner
   script:
