--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,12 @@
-FROM node:latest 
+FROM node:18.20.4-slim AS build
 
 WORKDIR /app
-
 COPY package.json .
-
 RUN npm i --silent
-RUN npm i -g serve --silent
-
-COPY . /app/
-
+COPY . .
 RUN npm run build
 
-CMD ["serve", "-s", "dist"]
+FROM nginx:stable-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+CMD ["nginx", "-g", "daemon off;"]
