--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,15 +43,17 @@ front_lint:
       - README.md
 
 deploy:
-  stage: deploy 
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  stage: deploy
   when: manual
   dependencies:
     - pylint
     - pytest
     - front_lint
-  tags: 
+  tags:
     - server-runner
   before_script:
-    - docker-compose down
+    - docker compose down
   script:
-    - docker-compose up -d --build
+    - docker compose up -d --build
